--- a/packages/building-rollup/package.json
+++ b/packages/building-rollup/package.json
@@ -55,8 +55,7 @@
     "owc-dev-server": "^0.2.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.4.0",
-    "rollup-plugin-copier": "^1.1.0",
-    "rollup-plugin-copy-assets": "^1.1.0",
+    "rollup-plugin-cpy": "^1.1.0",
     "rollup-plugin-visualizer": "^1.0.2"
   }
 }
